@@ -44,7 +44,7 @@ protected:
                           KigWidget& w, bool ctrlOrShiftDown );
   void midClicked( const QPoint& p, KigWidget& w );
   void rightClicked( const Objects& oco, const QPoint& p, KigWidget& w );
-  void mouseMoved( const Objects& os, const QPoint& p, KigWidget& w );
+  void mouseMoved( const Objects& os, const QPoint& p, KigWidget& w, bool shiftpressed );
 
   void enableActions();
   void cancelConstruction();
@@ -64,7 +64,7 @@ protected:
                           KigWidget& w, bool ctrlOrShiftDown );
   void midClicked( const QPoint& p, KigWidget& w );
   void rightClicked( const Objects& oco, const QPoint& p, KigWidget& w );
-  void mouseMoved( const Objects& os, const QPoint& p, KigWidget& w );
+  void mouseMoved( const Objects& os, const QPoint& p, KigWidget& w, bool shiftpressed );
 
   void enableActions();
   void cancelConstruction();
